Thu Mar 27 21:18:34 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (EvalWidget): add some tooltips.

Thu Mar 27 20:09:12 2003  Joern Thyssen  <jth@gnubg.org>

	* play.c (CommandNewGame): only pop game if a game is in progress.
	(reported in rec.games.gammon)

Thu Mar 27 19:39:59 2003  Joern Thyssen  <jth@gnubg.org>

	* import.c (ImportTMG): import beavers correctly
	* gnubg.c (CommandImportTMG): set path to tmg files.
	(reported by Ned Cross)

Sun Mar 23 19:28:43 2003  Oystein Johansen <oystein@gnubg.org>

        * gnubg.c: TextToClipboard: Fix bug from 14/03

Fri Mar 21 11:12:58 2003  Gary Wong  <gtw@gnu.org>

	* gnubg.c: Initialise new members in matchstate struct (otherwise
	"make check" fails).

Thu Mar 20 21:09:15 2003  Joern Thyssen  <jth@gnubg.org>

        Improve support for Jacoby and cube use.

        * gnubg.c, sgf.c, import.c, gtkgame.c, gtkboard.c, set.c, show.c,
        postscript.c, latex.c, html.c

        * import.c: TMG: support for Jacoby rule, cube use, and Nackgammon.  
        * import.c: SGG: support for Jacoby rule and cube use.

Thu Mar 20 14:17:22 2003  Gary Wong  <gtw@gnu.org>

	* configure.in: Add --enable-train-menu option, so the GTK+ train
	menu can be turned on at configure time.

Wed Mar 19 19:07:08 2003  Joern Thyssen  <jth@gnubg.org>

	* sgf.c (SaveGame): fix typo.
	(reported by Chris Wilson)

Wed Mar 19 18:53:49 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (real_main): special initialisation for TMG and SGG paths.
	(suggested by Albert Silver & Nis Joergensen)

Wed Mar 19 11:17:21 2003  Gary Wong  <gtw@gnu.org>

	* gtkgame.h: [!WIN32] Prototype GTKWinCopy().

Fri Mar 14 21:28:43 2003  Oystein Johansen <oystein@gnubg.org>

        * gnubg.c: bugfix in outputv() and outputerrv()

	* gnubg.c, gtkgame.c: clean up in the WinCopy/TextToClipboard functions 

Thu Mar 13 21:28:43 2003  Joern Thyssen  <jth@gnubg.org>

	Better support for variations in SGF, SGG, and TMG.
